--- a/ToDo.Web/Views/Shared/_Layout.cshtml
+++ b/ToDo.Web/Views/Shared/_Layout.cshtml
@@ -25,12 +25,13 @@
                     {
                         @Html.AntiForgeryToken()
 
-                        <ul class="nav navbar-nav navbar-right">
-                            <li>
-                                @User.Identity.Name
-                            </li>
-                            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-                        </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                    <li><a href="#">Hello  @User.Identity.Name</a></li>
+                   
+                    </li>
+                    <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+                </ul>
                     }
                 }
                 else
